# ircbits

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: test.yml
crates/echobot/: Cargo.toml  README.md
crates/echobot/src/: main.rs
crates/githash/: Cargo.toml  README.md
crates/githash/src/: lib.rs
crates/ircevents/: Cargo.toml  README.md
crates/ircevents/src/: main.rs
crates/irclog/: Cargo.toml
crates/irclog/src/: main.rs
crates/ircnet/: Cargo.toml  README.md
crates/ircnet/src/: client.rs  codec.rs  connect.rs  connection.rs  lib.rs  linestream.rs  util.rs
crates/ircnet/src/autoresponders/: ctcp.rs  mod.rs  ping.rs  responderset.rs
crates/ircnet/src/client/: builder.rs  mod.rs
crates/ircnet/src/client/autoresponders/: ctcp.rs  mod.rs  ping.rs  responderset.rs
crates/ircnet/src/client/commands/: join.rs  list.rs  login.rs  mod.rs  setusermode.rs
crates/ircnet/src/codecs/: mod.rs  raw_message.rs
crates/ircnet/src/commands/: login.rs  mod.rs
crates/ircnet/src/connect/: consts.rs  mod.rs
crates/ircnet/src/connect/codecs/: lines.rs  message.rs  mod.rs
crates/ircnet/src/handlers/: ctcp.rs  handler_set.rs  mod.rs  ping.rs
crates/ircnet/src/sasl/: mod.rs  plain.rs  scram.rs
crates/ircprobe/: Cargo.toml  README.md
crates/ircprobe/src/: main.rs
crates/irctext/: Cargo.toml  README.md
crates/irctext/src/: captarget.rs  casemapping.rs  channel.rs  command.rs  common.rs  consts.rs  ctcp.rs  elistcond.rs  key.rs  lib.rs  message.rs  modestring.rs  modetarget.rs  nickname.rs  parameter.rs  raw_message.rs  replies.rs  reply.rs  source.rs  target.rs  username.rs  util.rs  validstr.rs  verb.rs
crates/irctext/src/clientmsgs/: admin.rs  authenticate.rs  away.rs  cap.rs  connect.rs  error.rs  help.rs  info.rs  invite.rs  join.rs  kick.rs  kill.rs  links.rs  list.rs  lusers.rs  mod.rs  mode.rs  motd.rs  names.rs  nick.rs  notice.rs  oper.rs  part.rs  pass.rs  ping.rs  pong.rs  privmsg.rs  quit.rs  rehash.rs  restart.rs  squit.rs  stats.rs  tagmsg.rs  time.rs  topic.rs  user.rs  userhost.rs  version.rs  wallops.rs  who.rs  (+2 more)
crates/irctext/src/climsg/: cap.rs  connect.rs  help.rs  links.rs  lusers.rs  mod.rs  motd.rs  names.rs  nick.rs  oper.rs  part.rs  ping.rs  pong.rs  privmsg.rs  topic.rs  userhost.rs  who.rs  whowas.rs
crates/irctext/src/formatting/: attributes.rs  color100.rs  mod.rs  rgbcolor.rs
crates/irctext/src/parameters/: finalparam.rs  medialparam.rs  middle.rs  mod.rs  parameter.rs  paramlist.rs  paramref.rs  trailing.rs
crates/irctext/src/replies/: mod.rs  tests.rs
crates/irctext/src/types/: capability.rs  captarget.rs  channel.rs  channel_membership.rs  channel_status.rs  elistcond.rs  isupport.rs  key.rs  mod.rs  modestring.rs  modetarget.rs  msgtarget.rs  nickname.rs  reply_target.rs  tagkey.rs  tagvalue.rs  target.rs  userhostreply.rs  username.rs  whoflags.rs
crates/ircwatch/: Cargo.toml  README.md  build.rs
crates/ircwatch/src/: highlight.rs  main.rs
crates/listchans/: Cargo.toml  README.md
crates/listchans/src/: main.rs
crates/mainutil/: Cargo.toml  README.md
crates/mainutil/src/: lib.rs
crates/msgtimes/: Cargo.toml  README.md
crates/msgtimes/src/: main.rs
doc/: config-file.md  ircv3-support.md
src/: client.rs  codec.rs  linestream.rs  main.rs  messages.rs
src/messages/: channel.rs  command.rs  command_name.rs  common.rs  nickname.rs  parameter.rs  raw_command.rs  raw_message.rs  source.rs  username.rs  verb.rs
tools/: fmtlogs.py  irc2ansi.py  replies.py  tailirc.py
