[package]
name = "ircevents"
edition.workspace = true
rust-version.workspace = true
#description = ...
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytesize = "2.3.1"
clap.workspace = true
ircnet = { path = "../ircnet", features = ["serde"] }
irctext = { path = "../irctext" }
jiff.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "signal"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
