[package]
name = "ircevents"
edition.workspace = true
rust-version.workspace = true
description = "Log IRC events as JSON"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytesize = "2.3.1"
clap.workspace = true
ircnet = { path = "../ircnet", features = ["serde"] }
irctext = { path = "../irctext" }
jiff.workspace = true
mainutil = { path = "../mainutil" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
toml.workspace = true
tracing.workspace = true

[lints]
workspace = true
