[package]
name = "ircnet"
edition.workspace = true
rust-version.workspace = true
description = "Basic facilities for IRC connections"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytes = "1.5.0"
enum_dispatch.workspace = true
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
irctext = { path = "../irctext" }
itertools.workspace = true
jiff.workspace = true
replace_with = "0.1.8"
rustls-native-certs = "0.8.1"
rustls-pki-types = "1.10.0"
serde = { workspace = true, features = ["derive"], optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "time"] }
tokio-rustls = "0.26.2"
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
serde = ["dep:serde", "irctext/serde"]

[lints]
workspace = true
