[package]
name = "irctext"
edition.workspace = true
rust-version.workspace = true
description = "Parsing & displaying IRC messages"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anstyle = { version = "1.0.11", optional = true }
base64 = "0.22.1"
enum_dispatch = "0.3.13"
serde = { workspace = true, features = ["derive"], optional = true }
strum = { version = "0.27.1", features = ["derive"] }
thiserror.workspace = true
url = "2.5.0"

[dev-dependencies]
assert_matches = "1.5.0"
rstest = { version = "0.26.0", default-features = false }

[features]
anstyle = ["dep:anstyle"]
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
