[package]
name = "irctext"
edition.workspace = true
rust-version.workspace = true
description = "Parsing & displaying IRC messages"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anstyle = { workspace = true, optional = true }
base64.workspace = true
enum_dispatch.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
strum.workspace = true
thiserror.workspace = true
url = "2.5.0"

[dev-dependencies]
assert_matches = "1.5.0"
rstest = { version = "0.26.0", default-features = false }

[features]
anstyle = ["dep:anstyle"]
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
