[package]
name = "ircwatch"
edition.workspace = true
rust-version.workspace = true
#description = ...
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anstream = "0.6.19"
anyhow = "1.0.98"
clap = { version = "4.5.41", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
ircnet = { path = "../ircnet", features = ["serde"] }
irctext = { path = "../irctext", features = ["anstyle"] }
itertools = "0.14.0"
jiff = "0.2.15"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt", "signal"] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time", "time"] }

[lints]
workspace = true
