[package]
name = "ircwatch"
edition.workspace = true
rust-version.workspace = true
#description = ...
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anstream = "0.6.19"
anyhow.workspace = true
clap.workspace = true
ircnet = { path = "../ircnet", features = ["serde"] }
irctext = { path = "../irctext", features = ["anstyle"] }
itertools.workspace = true
jiff.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt", "signal"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
