[package]
name = "ircwatch"
edition.workspace = true
rust-version.workspace = true
description = "Stream IRC messages prettily"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anstream = "0.6.19"
anstyle.workspace = true
anyhow.workspace = true
clap.workspace = true
ircnet = { path = "../ircnet", features = ["serde"] }
irctext = { path = "../irctext", features = ["anstyle"] }
itertools.workspace = true
jiff.workspace = true
mainutil = { path = "../mainutil" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt"] }
toml.workspace = true
tracing.workspace = true

[lints]
workspace = true
