[package]
name = "listchans"
edition.workspace = true
rust-version.workspace = true
description = "Fetch channel list from an IRC server"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
ircnet = { path = "../ircnet", features = ["serde"] }
irctext = { path = "../irctext", features = ["anstyle"] }
patharg = "0.4.1"
serde_json = "1.0.140"
tokio = { version = "1.34.0", features = ["macros", "rt"] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time", "time"] }

[lints]
workspace = true
