[package]
name = "listchans"
edition.workspace = true
rust-version.workspace = true
description = "Fetch channel list from an IRC server"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ircnet = { path = "../ircnet", features = ["serde"] }
irctext = { path = "../irctext", features = ["anstyle"] }
jiff.workspace = true
patharg.workspace = true
serde_json = "1.0.140"
tokio = { workspace = true, features = ["macros", "rt"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
