[package]
name = "listchans"
edition.workspace = true
rust-version.workspace = true
description = "Fetch channel list from an IRC server"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ircnet = { path = "../ircnet", features = ["serde"] }
irctext = { path = "../irctext", features = ["anstyle"] }
mainutil = { path = "../mainutil" }
patharg.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
toml.workspace = true
tracing.workspace = true

[lints]
workspace = true
