[package]
name = "mainutil"
edition.workspace = true
rust-version.workspace = true
description = "Utilities for command-line programs"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
irctext = { path = "../irctext" }
jiff.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["macros", "signal"] }

[lints]
workspace = true
