[package]
name = "msgtimes"
edition.workspace = true
rust-version.workspace = true
#description = ...
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
either = "1.15.0"
ircnet = { path = "../ircnet", features = ["serde"] }
irctext = { path = "../irctext" }
jiff.workspace = true
patharg.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-jsonlines.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "signal"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
