[package]
name = "msgtimes"
edition.workspace = true
rust-version.workspace = true
description = "Record timestamps of messages sent to IRC channels"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
either = "1.15.0"
ircnet = { path = "../ircnet", features = ["serde"] }
irctext = { path = "../irctext" }
jiff.workspace = true
mainutil = { path = "../mainutil" }
patharg.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-jsonlines.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
toml.workspace = true
tracing.workspace = true

[lints]
workspace = true
